crates/carta/tests/snapshots/golden_writer__rst__common__emphasis-with-link.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
*see* `text <http://example.com>`__ *here*
