crates/carta/tests/snapshots/golden_writer__rst__common__footnote-codeblock-end.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
ref [1]_

.. [1]
   ::

      code only
