crates/carta/tests/snapshots/golden_writer__rst__common__footnote-two.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
x [1]_ y [2]_

.. [1]
   first

.. [2]
   second
