crates/carta/tests/snapshots/golden_writer__rst__common__horizontal-rule.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
above

--------------

below
