crates/carta/tests/snapshots/golden_writer__rst__common__image-external.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
|alt|

.. |alt| image:: https://example.org/i.png
