crates/carta/tests/snapshots/golden_writer__rst__common__inline-code-specials.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
before ``a & b ~ c \ d % e # f $ g _ h { i } j ^ k | l < m > n`` after
